# snowprints-rs

./: Cargo.toml  README.md
.github/workflows/: Tests.yml  build_and_test.yml
src/: arcd.rs  lib.rs  test.rs
tests/: snowprint_test.rs  snowprints_test.rs
