[package]
name = "snowprints"
version = "0.1.1"
edition = "2024"

categories = ["data-structures", "network-programming"]
description = "Generate snowflake IDs across logical volumes"  
keywords = ["UUID", "snowflake", "distributed", "systems", "64bit"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/w-lfpup/snowprints-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
